--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+html,
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%;
 }
 section,
 div {
   box-sizing: border-box;
+}
+#root {
+  height: 100%;
 }
