Change background & border of Timer

--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -4,9 +4,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background-color: red;
+  border: 2px solid black;
   height: 200px;
   width: 200px;
+  margin-bottom: 16px;
 }
 #timer-label {
 }
