Add space between controls

--- a/src/components/TimerControls/TimerControls.css
+++ b/src/components/TimerControls/TimerControls.css
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: center;
 }
+#timer-controls > div {
+  padding: 0 8px;
+}
 #timer-controls svg {
   width: 32px;
   height: 32px;
