--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,6 @@
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   padding: 32px;
 }
