--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  border: 2px solid black;
+  border: 2px solid var(--primary-color);
   height: 200px;
   width: 200px;
   margin-bottom: 16px;
